# trained

./: .gitignore
c/20180702/: main.c  remap.c  remap.h
c/20180703/: demo01  demo01.c  demo02  demo02.c
c/20180713/: demo01.c  demo02.c  demo03.c
c/20180714/: demo01.c  demo02.c  demo03.c  demo04.c  demo05.c
c/20180716/: demo01.c  demo02.c  demo03.c  demo04.c  demo05.c
gradle/20180718/: uploadConfig.gradle
gradle/20180807/: uploadConfig.gradle
html5/20170929/: demo01.html
html5/20171023/: demo01.html
html5/20171023/css/: style.css
html5/20180111/: demo01.html  demo02.html
html5/20180111/css/: style.css
html5/20180111/lib/: ball.js  demo01.js  demo02.js  utils.js
java/20180629/DemoSpace/: .gitignore  build.gradle  settings.gradle
java/20180629/DemoSpace/src/test/java/: AESCrypt.java  (+2 more)
kotlin/20180605/: demo01.kt  demo02.kt  demo03.kt  demo04.kt  demo05.kt  demo06.kt
kotlin/20180608/: demo01.kt  demo02.kt  demo03.kt  demo04.kt  demo05.kt  demo06.kt  demo07.kt  demo08.kt  demo09.kt  demo10.kt
mcu/20180125/: demo01.asm  demo01.c  demo01.hex  demo01.ihx  demo01.lk  demo01.lst  demo01.map  demo01.mem  demo01.rel  demo01.rst  demo01.sym
mcu/20180126/: Last Loaded demo01.DBK  demo01.DSN  demo01.asm  demo01.c  demo01.hex  demo01.ihx  demo01.lst  demo01.map  demo01.mem  demo01.rel  demo01.rst  demo01.sym
mcu/20180228/: demo01.c
python/20180615/: funcation.py
stm32/: README.md
stm32/20171106/: Makefile
stm32/20171106/src/: main.c
stm32/20171115/: CMakeLists.txt  flash.ld  toolchain-arm-none-eabi.cmake
stm32/20171115/src/: main.c
(+18 files in other folders)
